fix: use blurred background for all modals

--- a/src/main/webapp/uii/templatePG/css/src/components/_dialog.scss
+++ b/src/main/webapp/uii/templatePG/css/src/components/_dialog.scss
@@ -2,6 +2,8 @@
     --bs-modal-border-radius: var(--border-radius);
     --bs-modal-inner-border-radius: 0;
     --bs-modal-header-padding: 1em;
+    background-color: rgba(0,0,0,.5);
+    backdrop-filter: blur(3px);
 }
 
 .button-modal-close .fa {
